--- a/ICE1/index.html
+++ b/ICE1/index.html
@@ -12,7 +12,7 @@
           <tr>
             <th><a href = "https://cocoluk.github.io/ICE1/ice.html">Courtney Luk</a></th>
             <th><a href = "https://shdoong.github.io/ice1/">Susan Doong</a></th>
-            <th><a href = "https://nealons.github.io/index.html">Nealon Suthersan</a></th>
+            <th><a href = "https://nealons.github.io/ICE1/index.html">Nealon Suthersan</a></th>
             <th><a href = "https://juleswu.github.io/shuyue.github.io/ICE%201/">Julia Wu</th>
           </tr>
         </thead>
