--- a/ICE7/challenge2.html
+++ b/ICE7/challenge2.html
@@ -20,8 +20,7 @@
 </head>
 <body>
     <h1>Challenge Two</h1>
-    <form action="challenge5
-    .html">
+    <form action="challenge5.html">
       <fieldset>
         <legend>Billing Information</legend>
         <div>
