--- a/Portfolio/food.html
+++ b/Portfolio/food.html
@@ -23,23 +23,31 @@
 		</nav>
 	</header>
 	<div id="main-content" class="main-content main-content-craft">
-		<section class="pictures">
-		<div class = "grid">
-			<div class = "row">
-				<img class = 'dog flex' src = "pics/dog.JPG" alt = "This is a picture of my future dog!">
+		<h3>One of my biggest hobbies is cooking and photographing food! Here's a couple examples!</h3>
+		<section class = "crafts">
+			<div class = "photo-grid">
+				<div class = "photo-cell">
+					<img class="breakfast" src = "pics/breakfast.JPG" alt = "picture of breakfast">
 				</div>
-			<div class = "row">
-				<a href = "https://www.linkedin.com/in/nealon-suthersan-68aa55142/">
-				<img class = 'me flex' src = "pics/me.JPG" alt = 'This is a picture of me! Click it to see my professional experience!'></a>
+				<div class = "photo-cell">
+					<img class="salad" src = "pics/salad.JPG" alt = "picture of salad">
 				</div>
-			</div>
-		</section>
-		<p>Welcome to my Portfolio! The picture on the left is a picture of my future Black Lab! The picture on the right is a picture of me! Click on it to learn more about my professional experience!</p>
+				<div class = "photo-cell">
+					<img class="pasta" src = "pics/pasta.JPG" alt = "picture of pasta">
+				</div>
+				<div class = "photo-cell">
+					<img class="eggs" src = "pics/eggs.JPG" alt = "picture of eggs">
+				</div>
+
+
+
+
+
 	</div>
 
-	<footer>	
-		<a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/"></a> 
-		<a href="https://www.facebook.com/kneelin1"></a>
-		<p>Thank you for checking out my site!</p>
+<footer>	
+	<a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/"></a> 
+	<a href="https://www.facebook.com/kneelin1"></a>
+	<p>Thank you for checking out my site!</p>
 
-	</footer>
+</footer>
