--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -19,23 +19,13 @@
 				<li><a href = "knowbility.html">Knowbility Challenge</a></li>
 				<li><a href = "food.html">Hobbies</a></li>
 				<li><a href="https://instagram.com/boozybrownsugar" style="text-decoration: none;">Instagram</a></li>
-				<li><a href = "contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
 	</header>
-	<div id="main-content" class="main-content main-content-craft">
-		<section class="pictures">
-		<div class = "grid">
-			<div class = "row">
-				<img class = 'dog flex' src = "pics/dog.JPG" alt = "This is a picture of my future dog!">
-				</div>
-			<div class = "row">
-				<a href = "https://www.linkedin.com/in/nealon-suthersan-68aa55142/">
-				<img class = 'me flex' src = "pics/me.JPG" alt = 'This is a picture of me! Click it to see my professional experience!'></a>
-				</div>
-			</div>
-		</section>
-		<p>Welcome to my Portfolio! The picture on the left is a picture of my future Black Lab! The picture on the right is a picture of me! Click on it to learn more about my professional experience!</p>
+	<div id="main-content" class="main-content main-content-craft" >
+	<div class = "wrapper">
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc5_vHBiHMcGcfY8gyhz1CSZGWfnrA2WQfuWwy1sispzf5dMQ/viewform?embedded=true&amp;bc=transparent" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0" ALLOWTRANSPARENCY="true" style="margin-left: auto;margin-right: auto;">Loading...</iframe>
+	</div>
 	</div>
 
 	<footer>	
