--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -19,6 +19,7 @@
 				<li><a href = "knowbility.html">Knowbility Challenge</a></li>
 				<li><a href = "food.html">Hobbies</a></li>
 				<li><a href="https://instagram.com/boozybrownsugar" style="text-decoration: none;">Instagram</a></li>
+				<li><a href = "contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
 	</header>
