--- a/Portfolio/food.html
+++ b/Portfolio/food.html
@@ -19,7 +19,8 @@
 				<li><a href = "knowbility.html">Knowbility Challenge</a></li>
 				<li><a href = "food.html">Hobbies</a></li>
 				<li><a href="https://instagram.com/boozybrownsugar" style="text-decoration: none;">Instagram</a></li>
-			</ul>
+				<li><a href = "contact.html">Contact Me</a></li>
+			</ul>			
 		</nav>
 	</header>
 	<div id="main-content" class="main-content main-content-craft">
