--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -13,12 +13,12 @@
 	<header>
 		<nav id = "top-nav" class = "top-nav">
 			<div class="logo">
-			<h3><a href = "index.html" style="text-decoration: none; color: black; font-family: Palatino;">Nealon Suthersan</a></h3>
+			<a href = "index.html"><img src = "pics/logo.png" alt = "logo" height = "80" width = "80"></a>
 			</div>
 			<ul>
 				<li><a href = "knowbility.html">Knowbility Challenge</a></li>
 				<li><a href = "food.html">Hobbies</a></li>
-				<li><a href="https://instagram.com/boozybrownsugar" style="text-decoration: none;">Instagram</a></li>
+				<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
 				<li><a href = "contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
