--- a/Portfolio/food.html
+++ b/Portfolio/food.html
@@ -13,49 +13,92 @@
 	<header>
 		<nav id = "top-nav" class = "top-nav">
 			<div class="logo">
-			<h3><a href = "index.html" style="text-decoration: none; color: black; font-family: Palatino;">Nealon Suthersan</a></h3>
+			<a href = "index.html"><img src = "pics/logo.png" alt = "logo" height = "80" width = "80"></a>
 			</div>
 			<ul>
 				<li><a href = "knowbility.html">Knowbility Challenge</a></li>
 				<li><a href = "food.html">Hobbies</a></li>
-				<li><a href="https://instagram.com/boozybrownsugar" style="text-decoration: none;">Instagram</a></li>
+				<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
 				<li><a href = "contact.html">Contact Me</a></li>
 			</ul>			
 		</nav>
 	</header>
 	<div id="main-content" class="main-content main-content-craft">
-		<h3>One of my biggest hobbies is cooking and photographing food! Here's a couple examples!</h3>
-		<div class="row">
-		  <div class="column">
+		<h3 id = "single">One of my biggest hobbies is cooking and photographing food! Here's a couple examples!</h3>
+		  <div class="column" id = 'front'>
 		    <div class="content">
-		    <a target="_blank" href="pics/breakfast.JPG">
-		      <img src="pics/breakfast.JPG" alt="Breakfast" style="width:100%"></a>
-		      <h3>This is a picture of breakfast!</h3>
+		    <a target="_blank" href="pics/breakfast.JPEG">
+		      <img src="pics/breakfast.JPEG" alt="Breakfast" style="width:100%" z = 2></a>
+		      <h3 id = "cap">This is a picture of breakfast!</h3>
 		      <p>I took this in Seattle, WA</p>
 		    </div>
 		  </div>
 		  <div class="column">
-		    <div class="content">
-		    <a target="_blank" href="pics/salad.JPG">
-		      <img src="pics/salad.JPG" alt="Salad" style="width:100%"></a>
-		      <h3>This is a picture of salad I made!</h3>
+		    <div class="content" id = 'front'>
+		    <a target="_blank" href="pics/salad.JPEG">
+		      <img src="pics/salad.JPEG" alt="Salad" style="width:100%" z = 2></a>
+		      <h3 id = "cap">This is a picture of salad I made!</h3>
 		      <p>I took this in my house</p>
 		    </div>
 		  </div>
 		  <div class="column">
 		    <div class="content">
-		 	<a target="_blank" href="pics/pasta.JPG">
-		      <img src="pics/pasta.JPG" alt="Pasta" style="width:100%"></a>
-		      <h3>This is a picture of pasta I made!</h3>
-		      <p>I took this in my apartment at school</p>
+		    <a target="_blank" href="pics/tomukun.JPEG">
+		      <img src="pics/tomukun.JPEG" alt="Breakfast" style="width:100%" z = 2></a>
+		      <h3 id = "cap">My favorite pho in Ann Arbor!</h3>
+		      <p>Tomukun in Ann Arbor, MI</p>
 		    </div>
 		  </div>
 		  <div class="column">
 		    <div class="content">
-		   	<a target="_blank" href="pics/leaf.JPG">
-		      <img src="pics/leaf.JPG" alt="Banana Leaf" style="width:100%"></a>
-		      <h3>This is a picture of a vegetarian meal on a banana leaf</h3>
-		      <p>I took this in Chennai, India</p>
+		    <a target="_blank" href="pics/potatoes.JPEG">
+		      <img src="pics/potatoes.JPEG" alt="Salad" style="width:100%" z = 2></a>
+		      <h3 id = "cap">My take on my mom's famous roast potatoes!</h3>
+		      <p>Nealon's apartment in Ann Arbor, MI</p>
+		    </div>
+		  </div>
+		  <div class="column">
+		    <div class="content">
+		 	<a target="_blank" href="pics/rao.JPEG">
+		      <img src="pics/rao.JPEG" alt="Pasta" style="width:100%" z = 2></a>
+		      <h3 id = "cap">Some chicken I made at school!</h3>
+		      <p>Nealon's apartment in Ann Arbor, MI</p>
+		    </div>
+		  </div>
+		  <div class="column">
+		    <div class="content">
+		   	<a target="_blank" href="pics/chicken.JPEG">
+		      <img src="pics/chicken.JPEG" alt="Banana Leaf" style="width:100%"></a>
+		      <h3 id = "cap">My first attempt at a roast chicken!</h3>
+		      <p>Nealon's apartment in Ann Arbor, MI</p>
+		    </div>
+		  </div>
+		  <div class="column">
+		    <div class="content">
+		    <a target="_blank" href="pics/pizza.JPEG">
+		      <img src="pics/pizza.JPEG" alt="Breakfast" style="width:100%" z = 2></a>
+		      <h3 id = "cap">Pizza that I made at home!</h3>
+		      <p>Nealon's House in Yardley, PA</p>
+		    </div>
+		  </div>
+		  <div class="column">
+		    <div class="content">
+		    <a target="_blank" href="pics/fishcheeks.JPEG">
+		      <img src="pics/fishcheeks.JPEG" alt="Salad" style="width:100%" z = 2></a>
+		      <h3 id = "cap">My favorite Thai restaurant!</h3>
+		      <p>Fish Cheeks in New York, NY</p>
+		    </div>
+		  </div>
+		  </div>
+		  <div class="column">
+		    <div class="content">
+		 	<a target="_blank" href="pics/buvette.JPEG">
+		      <img src="pics/buvette.JPEG" alt="Pasta" style="width:100%" z = 2></a>
+		      <h3 id = "cap">This is my mom's favorite brunch spot!</h3>
+		      <p>Buvette in New York, NY</p>
+		    </div>
+		</div>
+
 		    </div>
 		  </div>
 		</div>
