--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -13,21 +13,21 @@
 	<header>
 		<nav id = "top-nav" class = "top-nav">
 			<div class="logo">
-			<h3><a href = "index.html" style="text-decoration: none; color: black; font-family: Palatino;">Nealon Suthersan</a></h3>
+			<a href = "index.html"><img src = "pics/logo.png" alt = "logo" height = "80" width = "80"></a>
 			</div>
 			<ul>
 				<li><a href = "knowbility.html">Knowbility Challenge</a></li>
 				<li><a href = "food.html">Hobbies</a></li>
-				<li><a href="https://instagram.com/boozybrownsugar" style="text-decoration: none;">Instagram</a></li>
+				<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
 				<li><a href = "contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
 	</header>
-	<div id="main-content" class="main-content main-content-craft">
 		<section class="pictures">
 		<div class = "grid">
 			<div class = "row">
-				<img class = 'dog flex' src = "pics/dog.JPG" alt = "This is a picture of my future dog!">
+				<a href = "http://moonlitlabradors.com/">
+				<img class = 'dog flex' src = "pics/dog.JPG" alt = "This is a picture of my future dog!"></a>
 				</div>
 			<div class = "row">
 				<a href = "https://www.linkedin.com/in/nealon-suthersan-68aa55142/">
@@ -35,7 +35,7 @@
 				</div>
 			</div>
 		</section>
-		<p>Welcome to my Portfolio! The picture on the left is a picture of my future Black Lab! The picture on the right is a picture of me! Click on it to learn more about my professional experience!</p>
+		<p>Welcome to my Portfolio! The picture on the left is a picture of my future Black Lab! Click on it to see where he comes from! The picture on the right is a picture of me! Click on it to learn more about my professional experience!</p>
 	</div>
 
 	<footer>	
