--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang= 'en'>
 <head>
-	<title>Contact Nealon!</title>
+	<title>About Nealon!</title>
 	<meta charset='UTF-8'>
 	<meta name="viewport" content= "width=device-width,
 	initial-scale=1, shrink-to-fit=no">
@@ -17,18 +17,21 @@
 			</div>
 			<ul>
 				<li><a href = "knowbility.html">Knowbility Challenge</a></li>
-				<li><a href = "food.html">Hobbies</a></li>
-				<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
-				<li><a href = "contact.html" style = "color: red">Contact Me</a></li>
+				<li style="font-family: Palatino;"><a href = "food.html">Hobbies</a></li>
+				<li><a href="about.html" style="color: red">About Me</a></li>
+				<li><a href = "contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
 	</header>
-	<div id="main-content" class="main-content main-content-craft" >
-	<div class = "wrapper">
-		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc5_vHBiHMcGcfY8gyhz1CSZGWfnrA2WQfuWwy1sispzf5dMQ/viewform?embedded=true&amp;bc=transparent" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0" ALLOWTRANSPARENCY="true" style="margin-left: auto;margin-right: auto;">Loading...</iframe>
+	<div class="container1">
+	  <img src="pics/maine.JPEG" alt="Maine Picture" style="width:100%";>
+	  <div class="centered">My name is Nealon. I love cooking, watching TV, traveling, and learning about new and burgeoning ideas!</div>
 	</div>
+	<div class="container2">
+	  <img src="pics/clouds.JPEG" alt="Clouds Picture" style="width:100%";>
+	  <a href = "https://www.linkedin.com/in/nealon-suthersan-68aa55142/"><div class="centered1">Here's my linkedin! So you can learn more about me.</div></a>
 	</div>
-
+</body>
 	<footer>	
 		<a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/"></a> 
 		<a href="https://www.facebook.com/kneelin1"></a>
