--- a/Portfolio/food.html
+++ b/Portfolio/food.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang= 'en'>
 <head>
-	<title>Nealon's Portfolio Site</title>
+	<title>Nealon's Hobbies</title>
 	<meta charset='UTF-8'>
 	<meta name="viewport" content= "width=device-width,
 	initial-scale=1, shrink-to-fit=no">
@@ -17,7 +17,7 @@
 			</div>
 			<ul>
 				<li><a href = "knowbility.html">Knowbility Challenge</a></li>
-				<li><a href = "food.html">Hobbies</a></li>
+				<li><a href = "food.html" style = 'color: red'>Hobbies</a></li>
 				<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
 				<li><a href = "contact.html">Contact Me</a></li>
 			</ul>			
