--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang= 'en'>
 <head>
-	<title>Nealon's Portfolio Site</title>
+	<title>Nealon's Portfolio Homepage</title>
 	<meta charset='UTF-8'>
 	<meta name="viewport" content= "width=device-width,
 	initial-scale=1, shrink-to-fit=no">
@@ -30,12 +30,12 @@
 				<img class = 'dog flex' src = "pics/dog.JPG" alt = "This is a picture of my future dog!"></a>
 				</div>
 			<div class = "row">
-				<a href = "https://www.linkedin.com/in/nealon-suthersan-68aa55142/">
-				<img class = 'me flex' src = "pics/me.JPG" alt = 'This is a picture of me! Click it to see my professional experience!'></a>
+				<a href = "https://www.instagram.com/boozybrownsugar/">
+				<img class = 'me flex' src = "pics/me.JPG" alt = 'This is a picture of me! Click it to see my instagram!'></a>
 				</div>
 			</div>
 		</section>
-		<p>Welcome to my Portfolio! The picture on the left is a picture of my future Black Lab! Click on it to see where he comes from! The picture on the right is a picture of me! Click on it to learn more about my professional experience!</p>
+		<p style= "color: black">Welcome to my Portfolio! The picture on the left is a picture of my future Black Lab! Click on it to see where he comes from! The picture on the right is a picture of me! Click on it to learn more about me through my Instagram and feel free to follow!!</p>
 	</div>
 
 	<footer>	
