--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -23,10 +23,20 @@
 			</ul>
 		</nav>
 	</header>
-	<div class="container1">
-	  <img src="pics/maine.JPEG" alt="Maine Picture" style="width:100%";>
-	  <div class="centered">My name is Nealon. I love cooking, watching TV, traveling, and learning about new and burgeoning ideas!</div>
-	</div>
+		<section class="pictures">
+		<div class = "grid">
+			<div class = "row">
+				<a href = "http://moonlitlabradors.com/">
+				<img class = 'dog flex' src = "pics/dog.JPG" alt = "This is a picture of my future dog!"></a>
+				</div>
+			<div class = "row">
+				<a href = "https://www.instagram.com/boozybrownsugar/">
+				<img class = 'me flex' src = "pics/me.JPG" alt = 'This is a picture of me! Click it to see my instagram!'></a>
+				</div>
+			</div>
+		</section>
+		<p style= "color: black">Welcome to my Portfolio! The picture on the left is a picture of my future Black Lab! Click on it to see where he comes from! The picture on the right is a picture of me! Click on it to learn more about me through my Instagram and feel free to follow!!</p>
+
 	<div class="container2">
 	  <img src="pics/clouds.JPEG" alt="Clouds Picture" style="width:100%";>
 	  <a href = "https://www.linkedin.com/in/nealon-suthersan-68aa55142/"><div class="centered1">Here's my linkedin! So you can learn more about me.</div></a>
