--- a/Portfolio/food.html
+++ b/Portfolio/food.html
@@ -7,6 +7,26 @@
 	initial-scale=1, shrink-to-fit=no">
 	<link rel= "stylesheet" type = "text/css" href="css/style.css">
 	<link rel= "stylesheet" type = "text/css" href="css/main.css">
+<script>
+	function myFunction() {
+    document.getElementById("myDropdown").classList.toggle("show");
+}
+
+// Close the dropdown if the user clicks outside of it
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}
+</script>
 </head>
 
 <body class="body">
@@ -16,11 +36,17 @@
 			<a href = "index.html"><img src = "pics/logo.png" alt = "logo" height = "80" width = "80"></a>
 			</div>
 			<ul>
-				<li><a href = "knowbility.html">Knowbility Challenge</a></li>
-				<li><a href = "food.html" style = 'color: red'>Hobbies</a></li>
+				<li><div class = 'dropdown'>
+				<button onclick="myFunction()" class = "dropbtn">Knowbility Challenge</li></button>
+					<div id="myDropdown" class = "dropdown-content">
+						<a href = "tenants.html" class = 'red'>Tenants</a>
+						<a href = "donors.html">Donors</a>
+						<a href = "volunteer.html">Volunteer</a>
+				</div></div>
+				<li><a href = "food.html" class = "red">Hobbies</a></li>
 				<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
 				<li><a href = "contact.html">Contact Me</a></li>
-			</ul>			
+			</ul>		
 		</nav>
 	</header>
 	<div id="main-content" class="main-content main-content-craft">
