--- a/Portfolio/tenants.html
+++ b/Portfolio/tenants.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang= 'en'>
 <head>
-	<title>About Nealon!</title>
+	<title>Nealon's Portfolio Homepage</title>
 	<meta charset='UTF-8'>
 	<meta name="viewport" content= "width=device-width,
 	initial-scale=1, shrink-to-fit=no">
 	<link rel= "stylesheet" type = "text/css" href="css/style.css">
 	<link rel= "stylesheet" type = "text/css" href="css/main.css">
+
 <script>
 	function myFunction() {
     document.getElementById("myDropdown").classList.toggle("show");
@@ -15,7 +16,11 @@
 // Close the dropdown if the user clicks outside of it
 window.onclick = function(event) {
   if (!event.target.matches('.dropbtn')) {
+
     var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
       if (openDropdown.classList.contains('show')) {
         openDropdown.classList.remove('show');
       }
@@ -33,37 +38,19 @@ window.onclick = function(event) {
 			</div>
 			<ul>
 				<li><div class = 'dropdown'>
-				<button onclick="myFunction()" class = "dropbtn">Knowbility Challenge</li></button>
+				<button onclick="myFunction()" class = "dropbtn red">Knowbility Challenge</li></button>
 					<div id="myDropdown" class = "dropdown-content">
 						<a href = "tenants.html" class = 'red'>Tenants</a>
 						<a href = "donors.html">Donors</a>
 						<a href = "volunteer.html">Volunteer</a>
 				</div></div>
 				<li><a href = "food.html">Hobbies</a></li>
-				<li><a href="about.html" style="text-decoration: none;" class = "red">About Me</a></li>
+				<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
 				<li><a href = "contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
 	</header>
-		<section class="pictures">
-		<div class = "grid">
-			<div class = "row">
-				<a href = "http://moonlitlabradors.com/">
-				<img class = 'dog flex' src = "pics/dog.JPG" alt = "This is a picture of my future dog!"></a>
-				</div>
-			<div class = "row">
-				<a href = "https://www.instagram.com/boozybrownsugar/">
-				<img class = 'me flex' src = "pics/me.JPG" alt = 'This is a picture of me! Click it to see my instagram!'></a>
-				</div>
-			</div>
-		</section>
-		<p style= "color: black">Welcome to my Portfolio! The picture on the left is a picture of my future Black Lab! Click on it to see where he comes from! The picture on the right is a picture of me! Click on it to learn more about me through my Instagram and feel free to follow!!</p>
 
-	<div class="container2">
-	  <img src="pics/clouds.JPEG" alt="Clouds Picture" style="width:100%";>
-	  <a href = "https://www.linkedin.com/in/nealon-suthersan-68aa55142/"><div class="centered1">Here's my linkedin! So you can learn more about me.</div></a>
-	</div>
-</body>
 	<footer>	
 		<a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/"></a> 
 		<a href="https://www.facebook.com/kneelin1"></a>
