--- a/ICE7/challenge2.html
+++ b/ICE7/challenge2.html
@@ -14,6 +14,10 @@
         $("#home").val($("#billing").val());
         $("#home").prop('disabled', true);
         }
+      else{
+        $("#home").val($("").val());
+        $("home").prop('attribute', false);
+      }
     });
 });
     </script>
