--- a/Portfolio/food.html
+++ b/Portfolio/food.html
@@ -45,8 +45,9 @@ window.onclick = function(event) {
 				</div></div>
 				<li><a href = "food.html" class = "red">Hobbies</a></li>
 				<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
-				<li><a href = "contact.html">Contact Me</a></li>
-			</ul>		
+				<li><a href = "contact.html" >Contact Me</a></li>
+				<li><a href = "news.html">News</a></li>
+			</ul>
 		</nav>
 	</header>
 	<div id="main-content" class="main-content main-content-craft">
