--- a/Portfolio/news.html
+++ b/Portfolio/news.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang= 'en'>
 <head>
-	<title>Contact Nealon!</title>
+	<title>Nealon's Portfolio Homepage</title>
 	<meta charset='UTF-8'>
 	<meta name="viewport" content= "width=device-width,
 	initial-scale=1, shrink-to-fit=no">
 	<link rel= "stylesheet" type = "text/css" href="css/style.css">
 	<link rel= "stylesheet" type = "text/css" href="css/main.css">
+
 <script>
 	function myFunction() {
     document.getElementById("myDropdown").classList.toggle("show");
@@ -27,7 +28,6 @@ window.onclick = function(event) {
   }
 }
 </script>
-</script>
 </head>
 
 <body class="body">
@@ -46,25 +46,11 @@ window.onclick = function(event) {
 				</div></div>
 				<li><a href = "food.html">Hobbies</a></li>
 				<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
-				<li><a href = "contact.html" class = "red">Contact Me</a></li>
-				<li><a href = "news.html">News</a></li>
+				<li><a href = "contact.html" >Contact Me</a></li>
+				<li><a href = "news.html" class = "red">News</a></li>
 			</ul>
 		</nav>
 	</header>
-	<div id="main-content" class="main-content main-content-craft">
-	<p id = "contact" style = 'text-align: center;'>Feel free to contact me if you have any questions or coments!</p>
-
-	<form action="https://formspree.io/nealonsuthersan@gmail.com"
-      method="POST">
-    <p>Name</p>
-    <input type="text" name="name"><br>
-    <p>Email</p>
-    <input type="email" name="_replyto"><br>
-    <p>Reason for Contact</p>
-    <input type="text" name="reason_for_contact"><br>
-    <input type="submit" value="Send" style= "margin-top: 10px">
-	</form>
-	</div>
 
 	<footer>	
 		<a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/"></a> 
