--- a/Portfolio/food.html
+++ b/Portfolio/food.html
@@ -33,9 +33,9 @@ window.onclick = function(event) {
 	<header>
 		<nav id = "top-nav" class = "top-nav">
 			<div class="logo">
-			<a href = "index.html"><img src = "pics/logo.png" alt = "logo" height = "80" width = "80"></a>
+			<a href = "index.html"><img src = "pics/logo.png" alt = "Logo with Name Initials" height = "80" width = "80"></a>
 			</div>
-			<ul>
+			<ol>
 				<li><div class = 'dropdown'>
 				<button onclick="myFunction()" class = "dropbtn">Knowbility Challenge</li></button>
 					<div id="myDropdown" class = "dropdown-content">
@@ -47,7 +47,7 @@ window.onclick = function(event) {
 				<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
 				<li><a href = "contact.html" >Contact Me</a></li>
 				<li><a href = "news.html">News</a></li>
-			</ul>
+			</ol>
 		</nav>
 	</header>
 	<div id="main-content" class="main-content main-content-craft">
