--- a/Portfolio/food.html
+++ b/Portfolio/food.html
@@ -28,28 +28,28 @@ window.onclick = function(event) {
 }
 </script>
 </head>
-
+<header>
+	<nav id = "top-nav" class = "top-nav">
+		<div class="logo">
+		<a href = "index.html"><img src = "pics/logo.png" alt = "Logo with Name Initials" height = "80" width = "80"></a>
+		</div>
+		<ol>
+			<li><div class = 'dropdown'>
+			<button onclick="myFunction()" class = "dropbtn">Knowbility Challenge</li></button>
+				<div id="myDropdown" class = "dropdown-content">
+					<a href = "tenants.html" class = 'red'>Tenants</a>
+					<a href = "donors.html">Donors</a>
+					<a href = "volunteer.html">Volunteer</a>
+			</div></div>
+			<li><a href = "food.html" class = "red">Hobbies</a></li>
+			<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
+			<li><a href = "contact.html" >Contact Me</a></li>
+			<li><a href = "news.html">News</a></li>
+		</ol>
+	</nav>
+</header>
 <body class="body">
-	<header>
-		<nav id = "top-nav" class = "top-nav">
-			<div class="logo">
-			<a href = "index.html"><img src = "pics/logo.png" alt = "Logo with Name Initials" height = "80" width = "80"></a>
-			</div>
-			<ol>
-				<li><div class = 'dropdown'>
-				<button onclick="myFunction()" class = "dropbtn">Knowbility Challenge</li></button>
-					<div id="myDropdown" class = "dropdown-content">
-						<a href = "tenants.html" class = 'red'>Tenants</a>
-						<a href = "donors.html">Donors</a>
-						<a href = "volunteer.html">Volunteer</a>
-				</div></div>
-				<li><a href = "food.html" class = "red">Hobbies</a></li>
-				<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
-				<li><a href = "contact.html" >Contact Me</a></li>
-				<li><a href = "news.html">News</a></li>
-			</ol>
-		</nav>
-	</header>
+
 	<div id="main-content" class="main-content main-content-craft">
 		<h3 id = "single">One of my biggest hobbies is cooking and photographing food! Here's a couple examples!</h3>
 		  <div class="column" id = 'front'>
@@ -130,7 +130,7 @@ window.onclick = function(event) {
 		  </div>
 		</div>
 	</div>
-
+</body>
 
 <footer>	
 	<p>Thank you for checking out my site!</p>
