--- a/Portfolio/news.html
+++ b/Portfolio/news.html
@@ -29,8 +29,6 @@ window.onclick = function(event) {
 }
 </script>
 </head>
-
-<body class="body">
 	<header>
 		<nav id = "top-nav" class = "top-nav">
 			<div class="logo">
@@ -51,7 +49,9 @@ window.onclick = function(event) {
 			</ul>
 		</nav>
 	</header>
+<body class="body">
 
+</body>
 	<footer>	
 		<a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/"></a> 
 		<a href="https://www.facebook.com/kneelin1"></a>
