--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -29,28 +29,28 @@ window.onclick = function(event) {
 </script>
 </script>
 </head>
-
+<header>
+	<nav id = "top-nav" class = "top-nav">
+		<div class="logo">
+		<a href = "index.html"><img src = "pics/logo.png" alt = "logo" height = "80" width = "80"></a>
+		</div>
+		<ul>
+			<li><div class = 'dropdown'>
+			<button onclick="myFunction()" class = "dropbtn">Knowbility Challenge</li></button>
+				<div id="myDropdown" class = "dropdown-content">
+					<a href = "tenants.html" class = 'red'>Tenants</a>
+					<a href = "donors.html">Donors</a>
+					<a href = "volunteer.html">Volunteer</a>
+			</div></div>
+			<li><a href = "food.html">Hobbies</a></li>
+			<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
+			<li><a href = "contact.html" class = "red">Contact Me</a></li>
+			<li><a href = "news.html">News</a></li>
+		</ul>
+	</nav>
+</header>
 <body class="body">
-	<header>
-		<nav id = "top-nav" class = "top-nav">
-			<div class="logo">
-			<a href = "index.html"><img src = "pics/logo.png" alt = "logo" height = "80" width = "80"></a>
-			</div>
-			<ul>
-				<li><div class = 'dropdown'>
-				<button onclick="myFunction()" class = "dropbtn">Knowbility Challenge</li></button>
-					<div id="myDropdown" class = "dropdown-content">
-						<a href = "tenants.html" class = 'red'>Tenants</a>
-						<a href = "donors.html">Donors</a>
-						<a href = "volunteer.html">Volunteer</a>
-				</div></div>
-				<li><a href = "food.html">Hobbies</a></li>
-				<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
-				<li><a href = "contact.html" class = "red">Contact Me</a></li>
-				<li><a href = "news.html">News</a></li>
-			</ul>
-		</nav>
-	</header>
+
 	<div id="main-content" class="main-content main-content-craft">
 	<p id = "contact" style = 'text-align: center;'>Feel free to contact me if you have any questions or coments!</p>
 
@@ -65,7 +65,7 @@ window.onclick = function(event) {
     <input type="submit" value="Send" style= "margin-top: 10px">
 	</form>
 	</div>
-
+</body>
 	<footer>	
 
 		<p>Thank you for checking out my site!</p>
