--- a/Portfolio/news.html
+++ b/Portfolio/news.html
@@ -38,9 +38,8 @@ window.onclick = function(event) {
 				<li><div class = 'dropdown'>
 				<button onclick="myFunction()" class = "dropbtn">Knowbility Challenge</li></button>
 					<div id="myDropdown" class = "dropdown-content">
-						<a href = "tenants.html" class = 'red'>Tenants</a>
-						<a href = "donors.html">Donors</a>
-						<a href = "volunteer.html">Volunteer</a>
+					<a href = "tenants.html" class = 'red'>Site Renovation</a>
+					<a href = "donors.html">Donate</a>
 				</div></div>
 				<li><a href = "food.html">Hobbies</a></li>
 				<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
