--- a/Portfolio/tenants.html
+++ b/Portfolio/tenants.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang= 'en'>
 <head>
-	<title>Nealon's Portfolio Homepage</title>
+	<title>Knowbility Challenge</title>
 	<meta charset='UTF-8'>
 	<meta name="viewport" content= "width=device-width,
 	initial-scale=1, shrink-to-fit=no">
@@ -38,21 +38,38 @@ window.onclick = function(event) {
 			<li><div class = 'dropdown'>
 			<button onclick="myFunction()" class = "dropbtn red">Knowbility Challenge</li></button>
 				<div id="myDropdown" class = "dropdown-content">
-					<a href = "tenants.html" class = 'red'>Tenants</a>
-					<a href = "donors.html">Donors</a>
-					<a href = "volunteer.html">Volunteer</a>
+					<a href = "tenants.html" class = 'red'>Site Renovation</a>
+					<a href = "donors.html">Tenants Page</a>
 			</div></div>
 			<li><a href = "food.html">Hobbies</a></li>
 			<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
 			<li><a href = "contact.html" >Contact Me</a></li>
-			<li><a href = "news.html">News</a></li>
 		</ul>
 	</nav>
 </header>
-<body class="body">
+<body>
+	<div class = "descript">
+		<h2>Knowbility Challenge (Austin Tenants Council)</h2>
+		<p>I, along with the rest of Team Julia, decided to partake in the Knowbility Accessibility Challenge that was discussed in lecture. We have had a great time acquianting ourselves with client interactions and accessible web design in a way that not only helps us, but helps a great non-profit organization as well. I am proud of our final product and this that it will greatly help the Austin Tenants Council. The old and new website designs are both displayed below for comparison. </p>
+	</div>
+	<div class = "descript" style = "margin-top: 30px">
+		<h2>Progress Thus Far</h2>
+		<p>So far we have had many meetings with our client contacts, Juliana and David. There has been a very fluid exchange of ideas as they told us what they absolutely wanted for their new site and we have advised them (to our best knowledge) of the most efficient ways to implement such ideas. Most of the website is complete, and the things that are not complete yet have placeholders so that you can get an idea of what the final product will be! </p>
+	</div>
+
+	<div class = "basket">
+      <h2 style = "margin-top: 70px">Old Site:</h2>
+      <iframe src = "http://www.housing-rights.org/" height = 700px width = 100% style = "display: black"></iframe>  
+    </div>
+    <div class = "basket">
+      <h2 style = "margin-top: 800px">New Site:</h2>
+      <iframe src = "http://team-julia.squarespace.com/" height = 700px width = 100%></iframe><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>
 
 </body>
-	<footer>	
-		<p>Thank you for checking out my site!</p>
-
-	</footer>
+	<footer> Thank you for checking out my site!
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+  	<a href="mailto:nealons@umich.edu?Subject=Hello!"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+    <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram"><i class="fa fa-instagram"></i></a>
+    <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
+  </footer>
