--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -32,20 +32,18 @@ window.onclick = function(event) {
 <header>
 	<nav id = "top-nav" class = "top-nav">
 		<div class="logo">
-		<a href = "index.html"><img src = "pics/logo.png" alt = "logo" height = "80" width = "80"></a>
+		<a href = "index.html"><img src = "pics/logo.png" alt = "Logo with Name Initials" height = "80" width = "80"></a>
 		</div>
 		<ul>
 			<li><div class = 'dropdown'>
 			<button onclick="myFunction()" class = "dropbtn">Knowbility Challenge</li></button>
 				<div id="myDropdown" class = "dropdown-content">
-					<a href = "tenants.html" class = 'red'>Tenants</a>
-					<a href = "donors.html">Donors</a>
-					<a href = "volunteer.html">Volunteer</a>
+					<a href = "tenants.html" class = 'red'>Site Renovation</a>
+					<a href = "donors.html">Tenants Page</a>
 			</div></div>
 			<li><a href = "food.html">Hobbies</a></li>
 			<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
 			<li><a href = "contact.html" class = "red">Contact Me</a></li>
-			<li><a href = "news.html">News</a></li>
 		</ul>
 	</nav>
 </header>
@@ -62,12 +60,13 @@ window.onclick = function(event) {
     <input type="email" name="_replyto"><br>
     <p>Reason for Contact</p>
     <input type="text" name="reason_for_contact"><br>
-    <input type="submit" value="Send" style= "margin-top: 10px">
+    <input type="submit" value="Send" style= "margin-top: 5px; margin-bottom: 200px">
 	</form>
 	</div>
 </body>
-	<footer>	
-
-		<p>Thank you for checking out my site!</p>
-
-	</footer>
+	<footer> Thank you for checking out my site!
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+  	<a href="mailto:nealons@umich.edu?Subject=Hello!"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+    <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram"><i class="fa fa-instagram"></i></a>
+    <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
+  </footer>
