--- a/Portfolio/food.html
+++ b/Portfolio/food.html
@@ -33,19 +33,17 @@ window.onclick = function(event) {
 		<div class="logo">
 		<a href = "index.html"><img src = "pics/logo.png" alt = "Logo with Name Initials" height = "80" width = "80"></a>
 		</div>
-		<ol>
+		<ul>
 			<li><div class = 'dropdown'>
 			<button onclick="myFunction()" class = "dropbtn">Knowbility Challenge</li></button>
 				<div id="myDropdown" class = "dropdown-content">
-					<a href = "tenants.html" class = 'red'>Tenants</a>
-					<a href = "donors.html">Donors</a>
-					<a href = "volunteer.html">Volunteer</a>
+					<a href = "tenants.html" class = 'red'>Site Renovation</a>
+					<a href = "donors.html">Tenants Page</a>
 			</div></div>
 			<li><a href = "food.html" class = "red">Hobbies</a></li>
 			<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
 			<li><a href = "contact.html" >Contact Me</a></li>
-			<li><a href = "news.html">News</a></li>
-		</ol>
+		</ul>
 	</nav>
 </header>
 <body class="body">
@@ -56,16 +54,16 @@ window.onclick = function(event) {
 		    <div class="content">
 		    <a target="_blank" href="pics/breakfast.JPEG">
 		      <img src="pics/breakfast.JPEG" alt="Breakfast" style="width:100%" z = 2></a>
-		      <h3 id = "cap">This is a picture of breakfast!</h3>
-		      <p>I took this in Seattle, WA</p>
+		      <h3 id = "cap">A great Creole breakfast!</h3>
+		      <p>Seattle, WA</p>
 		    </div>
 		  </div>
 		  <div class="column">
 		    <div class="content" id = 'front'>
 		    <a target="_blank" href="pics/salad.JPEG">
 		      <img src="pics/salad.JPEG" alt="Salad" style="width:100%" z = 2></a>
-		      <h3 id = "cap">This is a picture of salad I made!</h3>
-		      <p>I took this in my house</p>
+		      <h3 id = "cap">This is a salad I made!</h3>
+		      <p>Nealon's House in Yardley, PA</p>
 		    </div>
 		  </div>
 		  <div class="column">
@@ -80,7 +78,7 @@ window.onclick = function(event) {
 		    <div class="content">
 		    <a target="_blank" href="pics/potatoes.JPEG">
 		      <img src="pics/potatoes.JPEG" alt="Salad" style="width:100%" z = 2></a>
-		      <h3 id = "cap">My take on my mom's famous roast potatoes!</h3>
+		      <h3 id = "cap">My take on my mom's potatoes!</h3>
 		      <p>Nealon's apartment in Ann Arbor, MI</p>
 		    </div>
 		  </div>
@@ -95,8 +93,8 @@ window.onclick = function(event) {
 		  <div class="column">
 		    <div class="content">
 		   	<a target="_blank" href="pics/chicken.JPEG">
-		      <img src="pics/chicken.JPEG" alt="Banana Leaf" style="width:100%"></a>
-		      <h3 id = "cap">My first attempt at a roast chicken!</h3>
+		      <img src="pics/chicken.JPEG" alt="Banana Leaf meal" style="width:100%"></a>
+		      <h3 id = "cap">My attempt at a roast chicken!</h3>
 		      <p>Nealon's apartment in Ann Arbor, MI</p>
 		    </div>
 		  </div>
@@ -120,8 +118,8 @@ window.onclick = function(event) {
 		  <div class="column">
 		    <div class="content">
 		 	<a target="_blank" href="pics/buvette.JPEG">
-		      <img src="pics/buvette.JPEG" alt="Pasta" style="width:100%" z = 2></a>
-		      <h3 id = "cap">This is my mom's favorite brunch spot!</h3>
+		      <img src="pics/buvette.JPEG" alt="Buvette brunch " style="width:100%" z = 2></a>
+		      <h3 id = "cap">My mom's favorite restaurant!</h3>
 		      <p>Buvette in New York, NY</p>
 		    </div>
 		</div>
@@ -132,6 +130,9 @@ window.onclick = function(event) {
 	</div>
 </body>
 
-<footer>	
-	<p>Thank you for checking out my site!</p>
-</footer>
+	<footer> Thank you for checking out my site!
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+  	<a href="mailto:nealons@umich.edu?Subject=Hello!"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+    <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram"><i class="fa fa-instagram"></i></a>
+    <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
+  </footer>
